--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Formicarium
 # database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/formicarium-db
+spring.datasource.url=jdbc:mysql://localhost:3306/formicarium
 spring.datasource.username=root
 spring.datasource.password=oiDePSpICXAJ!
 
