--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,18 @@ spring.thymeleaf.mode=HTML
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
+server.servlet.session.persistent=false
+spring.session.store-type=none
+
+logging.level.org.thymeleaf=TRACE
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-
 
 logging.level.com.example.formicarium_app=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+jwt.secret=4Y^8t#dX*W$2z
+jwt.expiration=3600000
